--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "kiwi-client",
+  "name": "kawai",
   "version": "1.0.0",
-  "description": "Kawai Client ",
-  "author": "",
+  "description": "Kawai",
+  "author": "M2PQ",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "npm run dev",
+    "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run e2e",
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "vue": "^2.4.2",
+    "vue-carousel": "^0.6.5",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
