--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "vue": "^2.4.2",
     "vue-carousel": "^0.6.5",
-    "vue-router": "^2.7.0"
+    "vue-infinite-loading": "^2.2.1",
+    "vue-router": "^2.7.0",
+    "vue-sticky": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
