--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-carousel": "^0.6.5",
     "vue-infinite-loading": "^2.2.1",
     "vue-router": "^2.7.0",
-    "vue-sticky": "^3.3.1"
+    "vue-sticky": "^3.3.1",
+    "vuejs-carousel": "^0.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
