--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.2.1",
     "vue": "^2.4.2",
     "vue-carousel": "^0.6.5",
